--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>CookieClickerDeVince 1.0</title>
+		<title>CookieClickerDeVince ver. 1.0</title>
 		<link rel="stylesheet" href="main.css">
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Lobster+Two" rel="stylesheet">
@@ -9,7 +9,7 @@
 		
 		<div id="nc"><b>Cookies: <span id="cookies"></span></b><br></div>
 		Total de cookies faits: <span id="cookies_produced"></span><br>
-		<button onclick="clicker.click();">Créer un cookie</button><br><br>
+		<button onclick="clicker.click();">CrÃ©er un cookie</button><br><br>
 
 		Niveau: <span id="clicker_level"></span><br>
 		Production: <span id="clicker_productivity"></span><br>
