--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>CookieClickerDeVince ver. 1.0</title>
 		<link rel="stylesheet" href="main.css">
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Lobster+Two" rel="stylesheet">
 	</head>
 	<body>
